--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,8 +14,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - docker build --cache-from $REPOSITORY_URI:$IMAGE_TAG -t $IMAGE_REPO_NAME:$IMAGE_TAG .
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG 
+      - docker build -t gem-cpbe-demo .
+      - docker tag gem-cpbe-demo:latest 947681381905.dkr.ecr.ap-south-1.amazonaws.com/gem-cpbe-demo:latest
 
   post_build:
     commands:
