--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,5 +23,5 @@ phases:
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Push the latest image to cluster
-      - kubectl apply -f deployment.yaml
-      - kubectl rollout restart -f deployment.yaml
+      - kubectl apply -f Deployment.yaml
+      - kubectl rollout restart -f Deployment.yaml
