--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,15 +4,21 @@ phases:
 
   pre_build:
     commands:
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 947681381905.dkr.ecr.ap-south-1.amazonaws.com
-   
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
+      - docker pull $REPOSITORY_URI:$IMAGE_TAG
+      
+
   build:
-    commands:     
-      - docker build -t gem-cpbe-demo .
-      - docker tag gem-cpbe-demo:latest 947681381905.dkr.ecr.ap-south-1.amazonaws.com/gem-cpbe-demo:latest
+    commands:
+      - echo Building the Docker image...          
+      - docker build --cache-from $REPOSITORY_URI:$IMAGE_TAG -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG 
 
   post_build:
     commands:
-      - docker push 947681381905.dkr.ecr.ap-south-1.amazonaws.com/gem-cpbe-demo:latest
-      - kubectl apply -f Deployment.yaml
-      - kubectl rollout restart -f Deployment.yaml
+      - echo Pushing the Docker image...
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - echo Push the latest image to cluster
+      - kubectl apply -f deployment.yaml
+      - kubectl rollout restart -f deployment.yaml
