--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,8 @@
 version: 0.2
+env:
+    parameter-store:
+        AWS_ACCESS_KEY_ID: AKIA5ZJRWJYI2DGBWXOF
+        AWS_SECRET_ACCESS_KEY: 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
 
 phases:
 
@@ -18,7 +22,9 @@ phases:
       - echo Logging in to Amazon EKS...
       - aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $AWS_CLUSTER_NAME
       - echo check config 
-      - kubectl config view --minify      
+      - kubectl config view --minify
+      - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+      - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
       - echo check kubectl access
       - kubectl get svc
       - echo Logging in to Amazon ECR...
